@@ -1,4 +1,3 @@
-
 #include <stdint.h>
 
 #include "FastAccelStepper.h"
@@ -321,3 +320,4 @@ void RampGenerator::single_fill_queue(const struct ramp_ro_s *ro,
       steps, next_ticks, ro->target_pos, remaining_steps);
 #endif
 }
+void RampGenerator::abort() { _rw.ramp_state = RAMP_STATE_IDLE; }
