@@ -25,18 +25,19 @@ struct ramp_command_s {
 
 #if (TICKS_PER_S == 16000000L)
 #define UPM_TICKS_PER_S ((upm_float)0x97f4)
-#define US_TO_TICKS(u32) (u32*16)
-#define TICKS_TO_US(u32) (u32/16)
+#define US_TO_TICKS(u32) (u32 * 16)
+#define TICKS_TO_US(u32) (u32 / 16)
 #else
 #define UPM_TICKS_PER_S upm_timer_freq
 
 // This overflows for approx. 1s at 40 MHz, only
-#define US_TO_TICKS(u32) ((uint32_t)((((uint32_t)((u32)*(TICKS_PER_S/10000L)))/100L)))
+#define US_TO_TICKS(u32) \
+  ((uint32_t)((((uint32_t)((u32) * (TICKS_PER_S / 10000L))) / 100L)))
 
 // This calculation needs more work
-#define TICKS_TO_US(u32) ((uint32_t)((((uint32_t)((u32)/(TICKS_PER_S/1000000L)))/1L)))
+#define TICKS_TO_US(u32) \
+  ((uint32_t)((((uint32_t)((u32) / (TICKS_PER_S / 1000000L))) / 1L)))
 #endif
-
 
 class RampGenerator {
  public:
@@ -73,6 +74,8 @@ class RampGenerator {
   void setAcceleration(uint32_t accel);
   void initiate_stop() { _ro.force_stop = true; }
   bool is_stopping() { return _ro.force_stop; }
+  void abort();
+
   int calculate_moveTo(int32_t target_pos, const struct ramp_config_s *config,
                        uint32_t ticks_at_queue_end,
                        int32_t position_at_queue_end);
