@@ -1,3 +1,7 @@
+pre 0.8.4:
+- implement forceStopAndNewPosition()
+- StepperDemo extended to cause forceStopAndNewPosition by press X
+
 0.8.3:
 - AVR: timer compare interrupts are only enabled, if stepper is running.
 - AVR: on arrival of a command, the queue is started with few µs delay
